--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon -e hbs,express app.js"
+    "dev": "nodemon -e hbs,css,js app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
+    "mongoose": "^6.9.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
